Added iframeHelper to index

--- a/index.html
+++ b/index.html
@@ -54,5 +54,6 @@
 <script src="https://webglfundamentals.org/webgl/resources/m4.js"></script>
 <script src="https://webglfundamentals.org/webgl/resources/primitives.js"></script>
 <script src="HeatEquation.js"></script>
+<script src="iframeHelper.js"></script>
 </body>
 </html>
