changed container to 'iframeContainer' to avoid clashes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 <main>
-    <div id="container" class="content-body">
+    <div id="iframeContainer" class="content-body">
         <div id="WebGL-div">
             <h1>WebGL Single Dimensional Heat Equation Visualization</h1>
             <canvas id="WebGL-canvas"></canvas>
