--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div id="iframeContainer" class="content-body">
         <div id="WebGL-div">
             <h1>WebGL Single Dimensional Heat Equation Visualization</h1>
+            <h2>Click and drag on the mesh to view from different angles.</h2>
             <canvas id="WebGL-canvas"></canvas>
             <div class="HeatController">
                 <div class="controller-item">
@@ -38,7 +39,7 @@
                 </div>
             </div>
             <i>This project is a visualization of the Fourier series solution to the single dimensional heat equation along a rod. The mesh is generated and shaded using WebGL.</i>
-            <p>Click and drag on the mesh to view from different angles.</p>
+            <p>The project is lit and shaded. Diffuse lighting can be seen as the mesh is rotated.</p>
             <p>Source code is available at:</p>
             <a href="https://github.com/samfoucart/samfoucart">https://github.com/samfoucart/samfoucart</a>
             <h2>References:</h2>
